force-app/main/default/objects/Collector_Assignment__c/Collector_Assignment__c.object-meta.xml
<CustomObject>
    <label>Collector Assignment</label>
    <nameField>
        <label>Collector Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collector Assigment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>