force-app/main/default/objects/Collector_Assignment__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Collector Assigment</relationshipLabel>
    <relationshipName>Collector_Assigment</relationshipName>
    <type>Lookup</type>
</CustomField>